--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
+<!DOCTYPE html>
 <html>
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
 <body>
-<h1>Recruit Participants</h1>
-<p></p>
+    <h1>Recruit Participants</h1>
+    <p></p>
 </body>
+
 </html>
