--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,31 @@
             background-color: pink;
         }
 
-        h1 {
+        .header img {
+            float: left;
+            width:200px;
+            height:auto;
+            margin-left:50px;
+        }
+
+        
+        .header h1 {
+            position: relative;
             color: deepskyblue;
             font-family: cursive;
             font-size: 300%;
-            margin-left: 300px;
+            top: 25px;
+            left: 10px;
+            /* margin-left: 150px; */
         }
-
-        /* img {
-            width:150px;
-            height:88px;
-        } */
     </style>
 </head>
 
 <body>
-    <img src="images/brain-180.gif" style="height:50%"/>
-    <h1>Recruit Participants</h1>
+    <div class="header">
+        <img src="images/brain-180.gif"/>
+        <h1>Recruit Participants</h1>
+    </div>
     <p></p>
 </body>
 
