--- a/public/index.html
+++ b/public/index.html
@@ -2,37 +2,16 @@
 <html>
 
 <head>
-    <style>
-        body {
-            background-color: pink;
-        }
-
-        .header img {
-            float: left;
-            width:200px;
-            height:auto;
-            margin-left:50px;
-        }
-
-        
-        .header h1 {
-            position: relative;
-            color: deepskyblue;
-            font-family: cursive;
-            font-size: 300%;
-            top: 25px;
-            left: 10px;
-            /* margin-left: 150px; */
-        }
-    </style>
+  <title>Express</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-    <div class="header">
-        <img src="images/brain-180.gif"/>
-        <h1>Recruit Participants</h1>
-    </div>
-    <p></p>
+  <div class="header">
+    <img src="images/brain-180.gif"/>
+    <h1>Recruit Participants</h1>
+</div>
+<p></p>
 </body>
 
 </html>
