--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Recruit Participants</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -11,7 +11,22 @@
     <img src="images/brain-180.gif"/>
     <h1>Recruit Participants</h1>
 </div>
-<p></p>
+
+<div class="description">
+<p>Participate in science with inspiration and benefit</p>
+</div>
+
+<div class="roles">
+  <div class="role">
+    <a href="participant.html">I want to become a participant</a>
+  </div>
+  <div class="role">
+    <a href="researcher.html">I am a recruiting researcher</a>
+  </div>
+</div>
+
+
+
 </body>
 
 </html>
